--- a/package.json
+++ b/package.json
@@ -1,35 +1,16 @@
-{
-    "name": "flask-app",
+
+  {
+    "name": "arococo",
     "version": "1.0.0",
     "description": "A Flask app that renders HTML and CSS.",
     "main": "app.py",
     "scripts": {
-      "start": "web: gunicorn app:app --bind 0.0.0.0:$PORT",
-
-      "build:css": "postcss src/styles.css -o static/css/styles.css",
-      "watch": "npm run watch:css",
-      "watch:css": "postcss src/styles.css -o static/css/styles.css --watch",
-      "lint": "eslint .",
-      "test": "echo \"No tests yet\""
+      "start": "gunicorn app:app --bind 0.0.0.0:$PORT",
+      "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "dependencies": {
-      "postcss": "^8.4.21",
-      "postcss-cli": "^9.1.0",
-      "autoprefixer": "^10.4.14",
-      "eslint": "^8.36.0",
-      "eslint-plugin-html": "^7.1.0"
-    },
-    "devDependencies": {
-      "postcss": "^8.4.21",
-      "postcss-cli": "^9.1.0",
-      "autoprefixer": "^10.4.14",
-      "eslint": "^8.36.0",
-      "eslint-plugin-html": "^7.1.0"
-    },
-    "author": "",
-    "license": "MIT",
-    "engines": {
-      "node": ">=14.0.0"
-    }
+    "author": "Eyal yehiely",
+    "license": "ISC",
+    "dependencies": {},
+    "devDependencies": {}
   }
   
