--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
+blinker==1.8.2
+click==8.1.7
+Flask==3.0.3
 Flask-Assets==2.1.0
 Flask-Mail==0.10.0
 gunicorn==22.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+packaging==24.1
+webassets==2.0
+Werkzeug==3.0.3
